buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:$hs.spring.bootVersion"
        classpath "io.spring.gradle:dependency-management-plugin:$hs.spring.dependencyManagementVersion"
    }
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'



repositories {
    mavenCentral()
}
/*
java {
    sourceCompatibility = "17"
    targetCompatibility = "21"
}

 */

sourceSets.main.resources.srcDirs = ["src/resources"]

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.junit.jupiter:junit-jupiter:5.11.0-M2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
}


test {
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
/*    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }

 */
}
